# bm_common

./: .gitignore  CMakeLists.txt  README.md
include/: aligned_malloc.h  bm_os.h  lib_state_machine.h  timer_callback_handler.h  util.h
src/: aligned_malloc.c  lib_state_machine.c  ll.c  timer_callback_handler.c  util.c
src/platform/: bm_freertos.c
test/: CMakeLists.txt  README.md
test/mocks/: bm_os.h  mock_bm_os.h  mock_timer_callback_handler.h
test/src/: aligned_malloc_test.cpp  lib_state_machine_test.cpp  ll_test.cpp
test/stubs/: bm_os.c  timer_callback_handler_stub.c
